--- a/spring-boot-ajax-example/src/main/resources/templates/ajax.html
+++ b/spring-boot-ajax-example/src/main/resources/templates/ajax.html
@@ -32,7 +32,12 @@
                     <input type="text" class="form-control" id="username"/>
                 </div>
             </div>
-
+			<div class="form-group form-group-lg">
+				<label class="col-sm-2 control-label">Email</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="email">
+				</div>
+			</div>
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
                     <button type="submit" id="bth-search"
